
# --------------------------------------------------------------------- #
# DONE
181701
[*] Adjusted code to settings.yaml and sample_sheet.yaml. The pipeline now works witwo yaml files.
[*] Custom function for calling Rscript + Rscript parser for yaml like arguments
[*] Any number of feature combinations is now supported.

181201
[*]. Refactored the code so that the output of pipelines is always in bed format
[*]. Annotate peaks with given genomic annotation

171124
[*]. Refactored code - rules separated into multiple files
[*]. sorted out the bigWig/bigBed/UCSC tracks issue

171122
[*]. Annotation Processing
[*]. Signal extraction
[*]. Peak Annotation

170801
[*]. cofigure the pipeline for broad histone data
[*]. bedToBigBed for broadPeak data

170724
[*]. Automatic UCSC hub setup

170620
[*]. add scalling to the bedgraph construction

170615
[*]. Enable running subsections of the pipeline:
    IDR and PEAK calling are not obligatory

170614
[*]. extended the pipeline to accept multiple ChIP/Cont samples for peak calling
[*].  add support for peak calling without control:
    peak calling can be run without control samples - useful for ATAC data

172405
[*]. write checks for the config proper formatting :
    - ChIP and Cont parameters in peak calling
    - idr samples
[*]. Check for params:idr
[*] Add paired end test data
[*]. Extent to paired end reads
    - Testing for paired end reads
    - Mapping
    - Fastqc for paired end reads

Initial commit
[*] 0. Make test data
[*] 1. Variables into config file:
[*]    - genome path
[*]    - read extension
[*] 2. Automatic reference generation
[*] 3. check globbing
[*] 4. Add peak calling
[*]. Extract the input file for the fastqs as a config parameter
[*]. application placeholders in config files
[*]. Format messages
[*] Add interactive macs parameters
[*] Add possible pseudonims for samples

# --------------------------------------------------------------------- #
# TODO
## Main